# pingus

./: .gitignore  CMakeLists.txt
src/engine/display/: display.cpp  sdl_framebuffer.cpp
src/engine/screen/: screen_manager.cpp  screen_manager.hpp
src/engine/sound/: sound.cpp  sound_sdl_mixer.cpp  sound_sdl_mixer.hpp
src/pingus/: config_manager.cpp  config_manager.hpp  pingus_main.cpp
src/pingus/screens/: pingus_menu.cpp
src/util/: system.cpp
web/: idbfs_force.js  shell.html  styles.css
